<resources>
    <string name="app_name">Facebook</string>
    <string name="room">Room</string>
    <string name="what_s_on_your_mind">What\'s on your mind?</string>
    <string name="recent">Recent</string>
    <string name="photos">Photos</string>
    <string name="live">Live</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">share</string>
    <string name="todo">TODO</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up_for_facebook">Sign Up for Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_icon">add_icon</string>
    <string name="message_icon">message_icon</string>
    <string name="search_icon">search_icon</string>
</resources>